--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   image_picker: ^1.1.2
   shared_preferences: ^2.3.3
   intl_phone_number_input: ^0.7.4
+  intl: ^0.20.1
 
 dev_dependencies:
   flutter_test:
